initial aesthetic commit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/25dfb6424d.js" crossorigin="anonymous"></script>
+    <!-- <i class="fa-solid fa-triangle-exclamation"></i> -->
     <link rel="stylesheet" href="styles.css">
     <link rel="preload" href="/vrc-photos/spaceshrug.png" as="image" />
     <title>Asphodel Iburbur</title>
@@ -28,6 +29,9 @@
     <section id="home" class="home">
         <div class="sona-info">
             <article class="plz">
+                <span class="alert"><p><i class="fa-solid fa-triangle-exclamation"></i> This page is still a work in progress.</p> 
+                <p>Please be patient as I work to complete it!</p></span>
+                <span class="alert version"><p>version-1.01</p></span>
                 <h1>Asphodel Iburbur</h1>
                 <p>Nickname: Del</p>
                 <p>Age: 25</p>
