--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- <i class="fa-solid fa-triangle-exclamation"></i> -->
     <link rel="stylesheet" href="styles.css">
     <link rel="preload" href="/vrc-photos/spaceshrug.png" as="image" />
+    <link rel="preload" href="/sona-art/ref.png" as="image" />
+    <link rel="preload" href="/vrc-photos/fear.png" as="image" />
+    <link rel="preload" href="/vrc-photos/ohno.png" as="image" />
     <title>Asphodel Iburbur</title>
 </head>
 <body>
@@ -31,7 +34,7 @@
             <article class="plz">
                 <span class="alert"><p><i class="fa-solid fa-triangle-exclamation"></i> This page is still a work in progress.</p> 
                 <p>Please be patient as I work to complete it!</p></span>
-                <span class="alert version"><p>version-1.02</p></span>
+                <span class="alert version"><p>version-1.03</p></span>
                 <h1>Asphodel Iburbur</h1>
                 <p>Nickname: Del</p>
                 <p>Age: 25</p>
@@ -214,8 +217,8 @@
         </p>
         <p>
             &copy; Copywrite 2022
-            <a href="https://www.twitter.com/DergDel" target="_blank">
-                @DergDel
+            <a href="https://github.com/Deliburbur" target="_blank">
+                Deliburbur
             </a> All Rights Reserved.
         </p> 
     </footer>
