--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             This design and all of it's content is original and use of either without permission is strictly prohibited. 
         </p>
         <p>
-            &copy; Copywrite 2022
+            &copy; Copyright 2022
             <a href="https://github.com/Deliburbur" target="_blank">
                 Deliburbur
             </a> All Rights Reserved.
