--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             ><i class="fa-brands fa-steam"></i>
             </a>
             <a
-            href="htts://twitch.tv/delthederg"
+            href="https://twitch.tv/delthederg"
             target="_blank"
             class="contact-details"
             ><i class="fa-brands fa-twitch"></i>
