--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://deliburbur.co/">
+    <meta property="og:title" content="Asphodel Iburbur | Come See About Me">
+    <meta property="og:description" content="A site about my sona, Del. Includes art, VRChat pictures, and my socials!">
+    <meta property="og:image" content="https://i.imgur.com/PzE5boK.jpg">
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
       rel="stylesheet"
