--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://deliburbur.co/">
+    <meta property="og:url" content="https://deliburbur.com/">
     <meta property="og:title" content="Asphodel Iburbur | Come See About Me">
     <meta property="og:description" content="A site about my sona, Del. Includes art, VRChat pictures, and my socials!">
     <link
@@ -70,57 +70,57 @@
         <div id="sona-art" class="art-grid">
             <img
             class="art-pic"
-            src="/sona-art/ref.png"
+            src="/sona-art-new/ref.jpeg"
             alt="Asphodel Reference Sheet"
             >
             <img
             class="art-pic"
-            src="/sona-art/del1.0.png"
+            src="/sona-art-new/del1.0.jpeg"
             alt="Original Asphodel Design"
             >
             <img
             class="art-pic"
-            src="/sona-art/corvixnap.jpg"
+            src="/sona-art-new/corvixnap.jpeg"
             alt="Asphodel and Corvix Iris Eclipse Napping"
             >
             <img
             class="art-pic"
-            src="/sona-art/deltoon.jpg"
+            src="/sona-art-new/deltoon.jpeg"
             alt="Cartoon-y Version of Asphodel"
             >
             <img
             class="art-pic"
-            src="/sona-art/corvixfly.jpg"
+            src="/sona-art-new/corvixfly.jpeg"
             alt="Asphodel Flying With Corvix Iris Eclipse"
             >
             <img
             class="art-pic"
-            src="/sona-art/flowerbed.png"
+            src="/sona-art-new/flowerbed.jpeg"
             alt="Asphodel In a Bed of Flowers"
             >
             <img
             class="art-pic"
-            src="/sona-art/leofly.png"
+            src="/sona-art-new/leofly.jpeg"
             alt="Asphodel Flying With Leo"
             >
             <img
             class="art-pic"
-            src="/sona-art/lorldel.png"
+            src="/sona-art-new/lorldel.jpeg"
             alt="Asphodel Drawn by Lorlynn!"
             >
             <img
             class="art-pic"
-            src="/sona-art/pinnedya.jpg"
+            src="/sona-art-new/pinnedya.jpeg"
             alt="Asphodel Pinning Corvix Iris Eclipse"
             >
             <img
             class="art-pic"
-            src="/sona-art/pridevix.png"
+            src="/sona-art-new/pridevix.jpeg"
             alt="Asphodel Embracing Corvix Iris Eclipse"
             >
             <img
             class="art-pic"
-            src="/sona-art/winkicon.png"
+            src="/sona-art-new/winkicon.jpeg"
             alt="Asphodel Winking"
             >
         </div>
@@ -183,32 +183,32 @@
         <div id="vrc-photos" class="vrc-photos">
             <img
             class="vrc-photo"
-            src="/vrc-photos/protodergs11.png"
+            src="/vrc-photos-new/protodergs11.jpeg"
             alt="Asphodel with Xahau and Corvix Iris Eclipse"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos/aquastretch.png"
+            src="/vrc-photos-new/aquastretch.jpeg"
             alt="Asphodel at Furality Aqua"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos/leohoe.png"
+            src="/vrc-photos-new/leohoe.jpeg"
             alt="Asphodel with Crimson in the Background"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos/corvixcuddle.png"
+            src="/vrc-photos-new/corvixcuddle.jpeg"
             alt="Asphodel Cuddling with Corvix Iris Eclipse"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos/corvixblep.png"
+            src="/vrc-photos-new/corvixblep.jpeg"
             alt="Asphodel and Corvix Iris Eclipse"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos/lynxpunch.png"
+            src="/vrc-photos-new/lynxpunch.jpeg"
             alt="Asphodel being ASSAULTED by Maple Lynx"
             >
         </div>
