--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <article class="plz">
                 <span class="alert"><p><i class="fa-solid fa-triangle-exclamation"></i> This page is still a work in progress.</p> 
                 <p>Please be patient as I work to complete it!</p></span>
-                <span class="alert version"><p>version-1.03</p></span>
+                <span class="alert version"><p>version-1.04 - Photo Update</p></span>
                 <h1>Asphodel Iburbur</h1>
                 <p>Nickname: Del</p>
                 <p>Age: 25</p>
