--- a/index.html
+++ b/index.html
@@ -226,5 +226,7 @@
             </a> All Rights Reserved.
         </p> 
     </footer>
+
+    <!-- If you are seeing this, please note that copying any of this site's source code is prohibited, and it will keep you up at night for weeks. -->
 </body>
 </html>
