--- a/index.html
+++ b/index.html
@@ -80,18 +80,8 @@
             >
             <img
             class="art-pic"
-            src="/sona-art-new/corvixnap.jpeg"
-            alt="Asphodel and Corvix Iris Eclipse Napping"
-            >
-            <img
-            class="art-pic"
             src="/sona-art-new/deltoon.jpeg"
             alt="Cartoon-y Version of Asphodel"
-            >
-            <img
-            class="art-pic"
-            src="/sona-art-new/corvixfly.jpeg"
-            alt="Asphodel Flying With Corvix Iris Eclipse"
             >
             <img
             class="art-pic"
@@ -110,16 +100,6 @@
             >
             <img
             class="art-pic"
-            src="/sona-art-new/pinnedya.jpeg"
-            alt="Asphodel Pinning Corvix Iris Eclipse"
-            >
-            <img
-            class="art-pic"
-            src="/sona-art-new/pridevix.jpeg"
-            alt="Asphodel Embracing Corvix Iris Eclipse"
-            >
-            <img
-            class="art-pic"
             src="/sona-art-new/winkicon.jpeg"
             alt="Asphodel Winking"
             >
@@ -130,7 +110,7 @@
     <section id="trans1" class="transition">
         <div class="transdiv">
 
-        </div>
+        </div>  <!-- This is to remain empty at all times.-->
     </section>
 
     <!-- Contact Me -->
@@ -195,16 +175,6 @@
             class="vrc-photo"
             src="/vrc-photos-new/leohoe.jpeg"
             alt="Asphodel with Crimson in the Background"
-            >
-            <img
-            class="vrc-photo"
-            src="/vrc-photos-new/corvixcuddle.jpeg"
-            alt="Asphodel Cuddling with Corvix Iris Eclipse"
-            >
-            <img
-            class="vrc-photo"
-            src="/vrc-photos-new/corvixblep.jpeg"
-            alt="Asphodel and Corvix Iris Eclipse"
             >
             <img
             class="vrc-photo"
