--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <article class="plz">
                 <span class="alert"><p><i class="fa-solid fa-triangle-exclamation"></i> This page is still a work in progress.</p> 
                 <p>Please be patient as I work to complete it!</p></span>
-                <span class="alert version"><p>version-1.04 - Photo Update</p></span>
+                <span class="alert version"><p>version-1.05 - Purge</p></span>
                 <h1>Asphodel Iburbur</h1>
                 <p>Nickname: Del</p>
                 <p>Age: 25</p>
@@ -163,22 +163,22 @@
         <div id="vrc-photos" class="vrc-photos">
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/protodergs11.jpeg"
+            src="/vrc-photos-new/protodergs11-compressed.jpeg"
             alt="Asphodel with Xahau and Corvix Iris Eclipse"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/aquastretch.jpeg"
+            src="/vrc-photos-new/aquastretch-compressed.jpeg"
             alt="Asphodel at Furality Aqua"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/leohoe.jpeg"
+            src="/vrc-photos-new/leohoe-compressed.jpeg"
             alt="Asphodel with Crimson in the Background"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/lynxpunch.jpeg"
+            src="/vrc-photos-new/lynxpunch-compressed.jpeg"
             alt="Asphodel being ASSAULTED by Maple Lynx"
             >
         </div>
