photo-compression-AGAIN
end my suffering

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <article class="plz">
                 <span class="alert"><p><i class="fa-solid fa-triangle-exclamation"></i> This page is still a work in progress.</p> 
                 <p>Please be patient as I work to complete it!</p></span>
-                <span class="alert version"><p>version-1.06 - Photo Update 3.0</p></span>
+                <span class="alert version"><p>version-1.06 - Photo Update 3.1</p></span>
                 <h1>Asphodel Iburbur</h1>
                 <p>Nickname: Del</p>
                 <p>Age: 25</p>
@@ -70,17 +70,17 @@
         <div id="sona-art" class="art-grid">
             <img
             class="art-pic"
-            src="/sona-art-new/ref.jpeg"
+            src="/sona-art-new/ref-compressed.jpeg"
             alt="Asphodel Reference Sheet"
             >
             <img
             class="art-pic"
-            src="/sona-art-new/del1.0.jpeg"
+            src="/sona-art-new/del1.0-compressed.jpeg"
             alt="Original Asphodel Design"
             >
             <img
             class="art-pic"
-            src="/sona-art-new/deltoon.jpeg"
+            src="/sona-art-new/deltoon-compressed.jpeg"
             alt="Cartoon-y Version of Asphodel"
             >
             <img
@@ -90,7 +90,7 @@
             >
             <img
             class="art-pic"
-            src="/sona-art-new/leofly.jpeg"
+            src="/sona-art-new/leofly-compressed.jpeg"
             alt="Asphodel Flying With Leo"
             >
             <img
@@ -100,7 +100,7 @@
             >
             <img
             class="art-pic"
-            src="/sona-art-new/winkicon.jpeg"
+            src="/sona-art-new/winkicon-compressed.jpeg"
             alt="Asphodel Winking"
             >
         </div>
