--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <article class="plz">
                 <span class="alert"><p><i class="fa-solid fa-triangle-exclamation"></i> This page is still a work in progress.</p> 
                 <p>Please be patient as I work to complete it!</p></span>
-                <span class="alert version"><p>version-1.06 - Photo Update 3.1</p></span>
+                <span class="alert version"><p>version-1.06 - Photo Update 3.2</p></span>
                 <h1>Asphodel Iburbur</h1>
                 <p>Nickname: Del</p>
                 <p>Age: 25</p>
@@ -70,17 +70,17 @@
         <div id="sona-art" class="art-grid">
             <img
             class="art-pic"
-            src="/sona-art-new/ref-compressed.jpeg"
+            src="/sona-art-new/ref-compressed.jpg"
             alt="Asphodel Reference Sheet"
             >
             <img
             class="art-pic"
-            src="/sona-art-new/del1.0-compressed.jpeg"
+            src="/sona-art-new/del1.0-compressed.jpg"
             alt="Original Asphodel Design"
             >
             <img
             class="art-pic"
-            src="/sona-art-new/deltoon-compressed.jpeg"
+            src="/sona-art-new/deltoon-compressed.jpg"
             alt="Cartoon-y Version of Asphodel"
             >
             <img
@@ -90,7 +90,7 @@
             >
             <img
             class="art-pic"
-            src="/sona-art-new/leofly-compressed.jpeg"
+            src="/sona-art-new/leofly-compressed.jpg"
             alt="Asphodel Flying With Leo"
             >
             <img
@@ -100,7 +100,7 @@
             >
             <img
             class="art-pic"
-            src="/sona-art-new/winkicon-compressed.jpeg"
+            src="/sona-art-new/winkicon-compressed.jpg"
             alt="Asphodel Winking"
             >
         </div>
@@ -163,22 +163,22 @@
         <div id="vrc-photos" class="vrc-photos">
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/protodergs11-compressed.jpeg"
+            src="/vrc-photos-new/protodergs11-compressed.jpg"
             alt="Asphodel with Xahau and Corvix Iris Eclipse"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/aquastretch-compressed.jpeg"
+            src="/vrc-photos-new/aquastretch-compressed.jpg"
             alt="Asphodel at Furality Aqua"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/leohoe-compressed.jpeg"
+            src="/vrc-photos-new/leohoe-compressed.jpg"
             alt="Asphodel with Crimson in the Background"
             >
             <img
             class="vrc-photo"
-            src="/vrc-photos-new/lynxpunch-compressed.jpeg"
+            src="/vrc-photos-new/lynxpunch-compressed.jpg"
             alt="Asphodel being ASSAULTED by Maple Lynx"
             >
         </div>
